WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133775
Keep CFDataRefs in SharedBuffer instead of merging them
https://bugs.webkit.org/show_bug.cgi?id=133775
Summary
Keep CFDataRefs in SharedBuffer instead of merging them
Pratik Solanki
Reported
2014-06-11 16:06:34 PDT
Keep CFDataRefs in SharedBuffer instead of merging them
Attachments
Patch
(2.25 KB, patch)
2014-06-11 16:15 PDT
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-06-11 16:15:53 PDT
Created
attachment 232919
[details]
Patch
Alexey Proskuryakov
Comment 2
2014-06-11 16:30:24 PDT
Comment on
attachment 232919
[details]
Patch There is a case for (count == 1) above the modified code, should it be updated in the same way too? r=me assuming that there is a measurable improvement somewhere.
Alexey Proskuryakov
Comment 3
2014-06-11 16:31:07 PDT
> There is a case for (count == 1) above the modified code, should it be updated in the same way too?
No, I misread that code.
Pratik Solanki
Comment 4
2014-06-11 17:41:36 PDT
(In reply to
comment #2
)
> (From update of
attachment 232919
[details]
)
> r=me assuming that there is a measurable improvement somewhere.
Thanks for the review. By itself this will not improve performance but next up I would like to pass the SharedBuffer all the way down to IPC message send so that we can avoid merging the CFData and directly write to the IPC message.
WebKit Commit Bot
Comment 5
2014-06-11 17:47:20 PDT
Comment on
attachment 232919
[details]
Patch Clearing flags on attachment: 232919 Committed
r169868
: <
http://trac.webkit.org/changeset/169868
>
WebKit Commit Bot
Comment 6
2014-06-11 17:47:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug