Keep CFDataRefs in SharedBuffer instead of merging them https://bugs.webkit.org/show_bug.cgi?id=133775

Reviewed by Alexey Proskuryakov.

Instead of merging the CFDataRefs into one buffer, save them in as CFDataRefs in
SharedBuffer. They will get merged when code calls buffer() later on.

No new tests because no functional changes.

* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::ResourceHandle::handleDataArray):


Canonical link: https://commits.webkit.org/151759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169868 268f45cc-cd09-0410-ab3c-d52691b4dbfc